# yolov5_camera_detect

./: .gitattributes  .gitignore  README.md
cpp/: AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt  CMakeLists_rk3588.txt  main.cc  main_original.cc  rga_drm.hpp  udp_sender.cpp  udp_sender.hpp  v4l2_camera.cpp  v4l2_camera.hpp  video_capture.cpp  video_capture.h
cpp/esp8266/: main.cpp
cpp/include/: rk_comm_aiisp.h  rk_comm_ivs.h  rk_mpi_ivs.h
cpp/include/rkaiq/algos/awb/: rk_aiq_uapiv2_awb_int.h  rk_aiq_uapiv2_camgroup_awb_int.h
cpp/include/rkaiq/common/: rk_aiq_types_v20.h  rk_aiq_types_v21.h
cpp/include/rkaiq/iq_parser_v2/: lut3d_head.h
cpp/windows_demo/: main.cpp
python/: tts.py
